# rust-personal-project

./: .dockerignore  Makefile  README.md  backend.Dockerfile
.github/workflows/: rust.yml
cli_01/: Cargo.toml
cli_01/src/: main.rs
cli_02/: Cargo.toml
cli_02/src/: main.rs
doc/: architecture.drawio
pp_backend_api/: Cargo.toml
pp_backend_api/src/: api.rs  handler.rs  main.rs
pp_lib/: Cargo.toml
pp_lib/src/: factory.rs  model.rs
pp_lib/src/service/: db.rs  mod.rs  queue.rs
pp_lib/tests/: service_db_integration_tests.rs  service_queue_integration_tests.rs
pp_storage/: schema_handmade.sql
task_consumer/: Cargo.toml
task_consumer/src/: main.rs
task_producer/: Cargo.toml
task_producer/src/: main.rs
